# XAIApp

./: App.tsx  automation.ts  whisper.ts
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  whisper_bridge.cpp
android/app/src/main/java/com/aiotapp/: MainApplication.kt
android/app/src/main/java/com/aiotapp/automation/: AutomationModule.kt  AutomationPackage.kt  AutomationService.kt
android/app/src/main/java/com/xaiapp/: MainApplication.kt
android/app/src/main/java/com/xaiapp/speech/: SpeechRecognitionModule.kt
android/app/src/main/java/com/xaiapp/whisper/: WhisperModule.kt  WhisperPackage.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: automation_service_config.xml
components/: VoiceToText.tsx
